# menv

./: .ansible-lint  .coderabbit.yml  .env.example  .gitignore  .gitmodules  .mcp.json  .mock-run-22679776990  AGENTS.md  CI_CD_WORKFLOWS.md  CI_TESTING.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  RULES.md  Rules.md  apply.sh  clippy.toml  debug.txt  initial-setup.sh  install.sh  issue.md  justfile  mise.toml  plan.md  pyproject.toml  rustfmt.toml  setup.sh  setup_mac_settings.sh  test.md  test_clap.rs
.claude/: CLAUDE.md  settings.json  settings.local.json
.claude/commands/: act-srn.md  act-vce.md  docs-srn.md
.codex/: AGENTS.md
.gemini/: config.yaml  settings.json
.gemini/commands/: act-srn.toml  docs-srn.toml
.githooks/: pre-commit
.github/: CI_WORKFLOWS.md
.github/scripts/: setup_test.sh
.github/workflows/: CLAUDE.md  README.md  build-bundled-binary.yml  ci-pipeline.yml  ci-workflows.yml  ci.yml  ci_verify.sh  collect-coverage.yml  copilot-pr-review.yml  environment_ci.yml  jules-automerge.yml  jules-implementer-label.yml  jules-implementer-pr.yml  jules-integrator-pr.yml  jules-integrator.yml  jules-mock-cleanup.yml  jules-run-implementer.yml  jules-run-only-innovators.yml  jules-run-planner.yml  jules-scheduled-workflows.yml  jules-sync.yml  jules-workflows.yml  lint-and-test.yml  menv-internal-test-and-lint.yml  mev-internal-test-and-lint.yml  notify-completion.yml  release.yml  run-linters.yml  run-setup-test.yml  run-tests.yml  setup-alias.yml  setup-brew-formulae.yml  setup-brew.yml  setup-components.yml  setup-cursor.yml  setup-docker.yml  setup-flutter.yml  setup-formulae.yml  setup-gh.yml  setup-git.yml  (+26 more)
.jlo/: .jlo-managed.yml  config.toml  scheduled.toml
.jlo/setup/: install.sh  post-install.sh  tools.yml
.jules/: .jlo-managed.yml  JULES.md  README.md  github-labels.json
.jules/changes/: latest.yml
.jules/exchange/: changes.md  changes.yml
.mix/: review.md  revised_tasks.md
.mx/: info.md  revised_tasks.md  tasks.md
.serena/: project.yml
.serena/memories/: config_restructure_summary.md  gh_aliases_requirements.md  md-to-pdf_config_examples.md  slash-command-argument-patterns.md
.tmp.bak/: design.md  minutes.md  requirements.md  tasks.md
ansible/: ansible.cfg  ansible.just  playbook.yml
ansible/utils/: backup-extensions.sh  backup-system-defaults.sh  backup-system.sh  clean_desktop_caches.py
brew/: Brewfile
cli-tools/swstyle/: SWSTYLE.md  swstyle
config/: Brewfile  CLAUDE.md  gemlist
config/brew/: Brewfile
crates/menv-internal/: AGENTS.md  Cargo.toml
crates/menv-internal/src/: lib.rs  main.rs
crates/menv-internal/src/app/cli/: aider.rs  mod.rs  shell.rs  ssh.rs  vcs.rs
crates/menv-internal/tests/: cli.rs
crates/menv-internal/tests/cli/: aider.rs  shell.rs  ssh.rs  vcs.rs
cursor/: backup_cursor_settings.sh  extensions.json  restore_cursor_settings.sh  settings.json
docs/: architecture.md  ci-workflows.md  configuration.md  development.md  installation.md  justfile-usage.md  makefile-usage.md  menv-wrapper.md  overview.md  policy.md  procedure.md  testing.md  usage.md
git/: .gitconfig
installer/: ruby.sh
installers/: Makefile
macos/: backup.sh  backup_mac_settings.sh  generate_mac_settings.sh  setup_mac_settings.bak  setup_mac_settings.sh
node/: global-packages.json
scripts/: CLAUDE.md  apply-system-defaults.sh  backup-system-defaults.sh  brew.sh  cursor.sh  flutter.sh  gh.sh  git.sh  homebrew.sh  java.sh  link-shell.sh  mac.sh  macos.sh  node.sh  python.sh  ruby.sh  shell.sh  utils.sh  vscode.sh
shell/: .zprofile  .zshrc
src/: AGENTS.md  lib.rs  main.rs
tests/: AGENTS.md  adapters.rs  conftest.py  library.rs  runtime.rs  test_slash_assets.py  test_slash_config.py
xcode/: IDETemplateMacros.plist  backup_xcode_settings.sh  restore_xcode_settings.sh
(+1525 files in other folders)
