[project]
name = "menv"
version = "0.2.0"
description = "macOS development environment provisioning CLI"
authors = [{ name = "akitorahayashi" }]
requires-python = ">=3.12,<3.13"
dependencies = [
    "ansible>=11.2.0,<12.0.0",
    "httpx>=0.27.0,<1.0.0",
    "packaging>=24.0",
    "pyyaml>=6.0,<7.0",
    "rich>=14.0.0,<15.0.0",
    "typer>=0.21.0,<1.0.0",
]

[project.scripts]
menv = "menv.main:app"

[dependency-groups]
dev = [
    "mypy>=1.8.0",
    "pytest>=8.4.1,<9.0.0",
    "pytest-xdist>=3.8.0,<4.0.0",
    "ruff>=0.12.10,<1.0.0",
    "ansible-lint>=25.0.0",
    "types-PyYAML>=6.0.0",
]
mlx = [
    "mlx-lm>=0.28.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/menv"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-q -s --tb=short"

[tool.ruff]
target-version = "py312"
exclude = [
    "__pycache__",
    "*.pyc",
    ".uv-cache",
    ".venv",
    "venv",
    "env",
    "mlx-lm",
    "*/bin/**",
    "*/lib/**",
    "*/share/**",
    "*/etc/**",
    "*/pyvenv.cfg"
]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

