[project]
name = "menv"
version = "1.0.0"
description = "macOS development environment provisioning CLI"
authors = [{ name = "akitorahayashi" }]
requires-python = ">=3.12"
dependencies = [
    "ansible>=11.2.0,<12.0.0",
]

[project.scripts]
mev = "mev_bootstrap.launcher:main"

[dependency-groups]
dev = [
    "ruff>=0.12.10,<1.0.0",
    "ansible-lint>=25.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["python/mev_bootstrap"]

[tool.hatch.build.targets.wheel.force-include]
"src/assets/ansible" = "mev_bootstrap/assets/ansible"
"src/assets/bundled_binaries" = "mev_bootstrap/assets/bundled_binaries"

[tool.hatch.build.targets.sdist.force-include]
"src/assets/ansible" = "mev_bootstrap/assets/ansible"
"src/assets/bundled_binaries" = "mev_bootstrap/assets/bundled_binaries"

[tool.ruff]
target-version = "py312"
exclude = [
    "__pycache__",
    "*.pyc",
    ".uv-cache",
    ".venv",
    "venv",
    "env",
    "mlx-lm",
    "*/bin/**",
    "*/lib/**",
    "*/share/**",
    "*/etc/**",
    "*/pyvenv.cfg"
]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]
