[project]
name = "mev"
version = "1.0.0"
description = "macOS development environment provisioning CLI"
authors = [{ name = "akitorahayashi" }]
requires-python = ">=3.12"
dependencies = [
    "ansible>=11.2.0,<12.0.0",
]

[project.scripts]
mev = "mev.launcher:main"

[dependency-groups]
dev = [
    "ruff>=0.12.10,<1.0.0",
    "ansible-lint>=25.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["dist/mev"]

[tool.hatch.build.targets.wheel.force-include]
"dist/mev/ansible" = "mev/ansible"
"dist/mev/bin" = "mev/bin"

[tool.hatch.build.targets.sdist.force-include]
"dist/mev/ansible" = "mev/ansible"
"dist/mev/bin" = "mev/bin"

[tool.ruff]
target-version = "py312"
exclude = [
    "__pycache__",
    "*.pyc",
    ".uv-cache",
    ".venv",
    "venv",
    "env",
    "mlx-lm",
    "*/bin/**",
    "*/lib/**",
    "*/share/**",
    "*/etc/**",
    "*/pyvenv.cfg"
]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]
