[package]
name = "menv-internal"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
dirs = "6.0"
glob = "0.3"
serde_json = "1.0"
thiserror = "1.0"
which = "7.0"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
serde_json = "1.0"
tempfile = "3.10"
